cabal-version:       2.4
name:                moa
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             Apache-2.0
license-file:        LICENSE
author:              Dave Parfitt
maintainer:          Dave Parfitt <metadave@protonmail.com>
copyright:           2020 Dave Parfitt
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.1

common common-options
  build-depends:       base  >=4.13.0.0 && <4.15,
                       optparse-applicative,
                       lens,
                       megaparsec,
                       QuickCheck
                       
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Moa.Moa,
                       Moa.CLI
                       

executable moa
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       moa
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite moa-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       moa
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
